@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-18T01:06:00Z",
+  "timestamp" : "2023-07-18T16:10:10Z",
   "count_outdated" : 1267,
   "uniques_outdated" : 679,
-  "count" : 1287,
-  "uniques" : 690,
+  "count" : 1288,
+  "uniques" : 691,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
